--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12
   http: ^0.12.2
+  pdf: ^1.5.0
+  path_provider: ^1.6.5
+  flutter_full_pdf_viewer: ^1.0.6
 
 dev_dependencies:
   flutter_test:
