--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12
   http: ^0.12.2
   pdf: ^1.5.0
-  path_provider: ^1.6.5
-  flutter_full_pdf_viewer: ^1.0.6
+  printing: ^3.7.1
 
 dev_dependencies:
   flutter_test:
