--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.12.2
   pdf: ^1.5.0
   printing: ^3.7.1
+  page_transition: 1.1.7+2 
 
 dev_dependencies:
   flutter_test:
