--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ms_honda_sales">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
    <application
         android:label="ms_honda_sales"
         android:icon="@mipmap/ic_launcher">
