--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   toast: ^0.1.5
   printing: ^3.7.1
   page_transition: 1.1.7+2 
+  path_provider: ^1.6.5
+  flutter_full_pdf_viewer: ^1.0.6
 
 dev_dependencies:
   flutter_test:
